--- a/style.css
+++ b/style.css
@@ -79,4 +79,27 @@ ul.nav a {
 .look:focus:after {
 	width: 12%;
 }
-
+.look-2 {
+    position: relative;
+	cursor: pointer;
+	line-height: 1;
+	text-decoration: none;
+    color: gray;
+}
+.look-2::after {
+    display: block;
+	position: absolute;
+	left: 0;
+	width: 0;
+	height: 1px;
+	background-color: black;
+	content: "";
+	transition: 0.4s ease-out;
+}
+.look-2:hover {
+    color: black;
+}
+.look-2:hover:after,
+.look-2:focus:after {
+	width: 19%;
+}
